@@ -1,3 +1,8 @@
+2003-08-18  Muktha  <muktha.narayan@wipro.com>
+
+	* gconf/gconftool.c (main) : Print usage message when no options are
+	passed to gconftool-2. Fixes #70316.
+
 2003-08-11  Christophe Fergeau  <teuf@gnome.org>
 
 	* doc/gconf/tmpl/gconf-client.sgml:
